
+
** *Commencez avec Astra Control Provisioner*
C'est possible link:../use/enable-acp.html["Activez le mécanisme de provisionnement Astra Control"^] Si vous avez installé et configuré votre environnement pour utiliser Astra Trident 23.10.
** *Fonctionnalité Astra Control Provisioner*
+
Les fonctions suivantes sont disponibles avec l'Astra Control Provisioner 23.10 :

+
*** *Sécurité renforcée du back-end de stockage avec le cryptage Kerberos 5* : vous pouvez améliorer la sécurité du stockage par link:../use-acp/configure-storage-backend-encryption.html["activation du chiffrement"^] pour le trafic entre votre cluster géré et le back-end de stockage. ASTRA Control Provisioner prend en charge le chiffrement Kerberos 5 sur connexions NFSv4.1 des clusters Red Hat OpenShift aux volumes Azure NetApp Files et ONTAP sur site.
*** *Récupérer des données à l'aide d'un snapshot* : Astra Control provisionner offre une restauration rapide de volume sur place à partir d'un snapshot à l'aide du `TridentActionSnapshotRestore` (TASR) CR.
*** *Fonctionnalités de sauvegarde et de restauration pour les applications avec `ontap-nas-economy` Systèmes back-end avec sauvegarde par pilote* : comme décrit <<nas-eco-backup-restore,ci-dessus>>.




* *Prise en charge d'Astra Control Service pour les clusters Red Hat OpenShift Service sur AWS (ROSA)*
+
link:../get-started/add-first-cluster.html["Ajouter un cluster"^]

* *Prise en charge de la gestion des applications qui utilisent le stockage NVMe/TCP*
ASTRA Control peut désormais gérer des applications sauvegardées par des volumes persistants et connectés via NVMe/TCP.