@@ -732,7 +732,6 @@
   <block id="a20299ad7f2e64a95e7cc3284a9906a5" category="list-text">Applications déployées par l'opérateur Astra Control prend en charge certaines applications lorsqu'elles sont déployées avec des opérateurs.</block>
   <block id="d64b4db98e014f5440d1f843fea08e3e" category="list-text">Les entités de service ayant un périmètre de groupe de ressources le service de contrôle Astra prend désormais en charge les entités de service qui utilisent une portée de groupe de ressources.</block>
   <block id="bf2952986042f5403c53bded609c0d9b" category="section-title">5 août 2021</block>
-  <block id="d965fac9eadc89088435d79a0e46882b" category="list-text">Astra Control Center Astra Control est désormais disponible dans un nouveau modèle de déploiement. _Astra Control Center_ est un logiciel autogéré que vous installez et utilisez dans votre data Center. Il vous permet de gérer la gestion du cycle de vie des applications Kubernetes pour les clusters Kubernetes sur site.</block>
   <block id="1966afd91050d7e96fceb59f9fd13f32" category="inline-link">Accédez à la documentation Astra Control Center</block>
   <block id="80bfdf6309549a7797f10098e05bccc1" category="paragraph">Pour en savoir plus,<block ref="ba5556fa094f10e77f4fa7086cec4749" category="inline-link-rx"></block>.</block>
   <block id="eb98a9a286b93bcf890e03ce1c9063eb" category="list-text">Apportez votre propre compartiment pour gérer les compartiments utilisés par Astra pour les sauvegardes et les clones, en ajoutant des compartiments supplémentaires et en modifiant le compartiment par défaut pour les clusters Kubernetes de votre fournisseur cloud.</block>
@@ -2090,7 +2089,6 @@
   <block id="974030a30a48754684d05541fd5e96c9" category="list-text">Google Kubernetes Engine (GKE)</block>
   <block id="445b99028268202ea6dce47e9f8a85a0" category="list-text">Red Hat OpenShift Service sur AWS (ROSA)</block>
   <block id="5272b1b73b7b8f46f79fa9cdaadca15e" category="list-text">ROSA avec AWS PrivateLink</block>
-  <block id="d1398a9488bb275cd91d0cb20ce8d256" category="list-text">Red Hat OpenShift Container Platform sur site</block>
   <block id="df19c91edd9b2d860753f42efea5673b" category="section-title">Poser le connecteur Astra</block>
   <block id="cd6d7cc4ca7e276970cfd8898e2ee94d" category="list-text">Lorsque vous effectuez ces étapes, exécutez ces commandes sur le cluster privé que vous souhaitez gérer avec Astra Control Service.</block>
   <block id="1edf1f850fb1dd3ecb6ec5a68b931d8a" category="list-text">Si vous utilisez un hôte bastion, exécutez ces commandes à partir de la ligne de commande de l'hôte bastion.</block>
@@ -2135,12 +2133,8 @@
   <block id="341784bc72164a9576c48141a8457786" category="doc">Configurer le chiffrement du système back-end de stockage</block>
   <block id="876580b79932af82226561f24b11688f" category="paragraph">Avec Astra Control Provisioner, vous pouvez améliorer la sécurité d'accès aux données en activant le chiffrement pour le trafic entre votre cluster géré et le back-end de stockage.</block>
   <block id="976a1386596f05796be42a064d0422a1" category="paragraph">ASTRA Control Provisioner prend en charge le chiffrement Kerberos pour deux types de systèmes back-end de stockage :</block>
-  <block id="c0e152193948fa32b98363da93fdd8ae" category="list-text">*ONTAP* sur site - Astra Control Provisioner prend en charge le chiffrement Kerberos sur les connexions NFSv3 et NFSv4 depuis les clusters Red Hat OpenShift et Kubernetes en amont vers les volumes ONTAP sur site.</block>
   <block id="efd821ece7f5d1edb285cc1f077325d0" category="list-text">*Azure NetApp Files* - Astra Control Provisioner prend en charge le chiffrement Kerberos sur les connexions NFSv4.1 à partir de clusters Kubernetes en amont vers des volumes Azure NetApp Files.</block>
   <block id="0a710c309a5f6dc65b056833a5208521" category="paragraph">Vous pouvez créer, supprimer, redimensionner, snapshot, cloner clone en lecture seule et importation des volumes qui utilisent le chiffrement NFS.</block>
-  <block id="2aff02c8ceb99a9445937af9d4d8f286" category="section-title">Configurez le chiffrement Kerberos à la volée avec les volumes ONTAP sur site</block>
-  <block id="330282591e8caa9814eb88ec524b89cf" category="paragraph">Vous pouvez activer le chiffrement Kerberos sur le trafic de stockage entre votre cluster géré et un système back-end de stockage ONTAP sur site.</block>
-  <block id="daf34fb0fcb74d9bcf85abcebcc8e1f2" category="admonition">Le chiffrement Kerberos pour le trafic NFS avec les systèmes back-end de stockage ONTAP sur site n'est pris en charge que par le<block ref="8321592ce24c8a122ecf26a63cfca407" prefix=" " category="inline-code"></block> pilote de stockage</block>
   <block id="bf08e3747af8cdb14b7eaf98563b8d7e" category="inline-link-macro">Activez le mécanisme de provisionnement Astra Control</block>
   <block id="0ff02d27ae5cac1a12c6c403fd55443c" category="list-text">Assurez-vous d'avoir accès au<block ref="c67fd1b99934afa248dfeb285a9a4191" prefix=" " category="inline-code"></block> informatique.</block>
   <block id="bef890ed7cc869346d4b483cd3e3ab00" category="list-text">Assurez-vous de disposer d'un accès administrateur au système back-end de stockage ONTAP.</block>
@@ -2360,7 +2354,6 @@ C'est possible <block ref="34554017affcf2d95a6dc49ac60c5b22" category="inline-li
   <block id="a28c4973c51793fba9a52bb919793c55" category="list-text">*Fonctionnalité Astra Control Provisioner*</block>
   <block id="e04a039dab89abe32a55e462186f4be5" category="paragraph">Les fonctions suivantes sont disponibles avec l'Astra Control Provisioner 23.10 :</block>
   <block id="c935990e28d9a826be6bb8ad7cbaa9c1" category="inline-link-macro">activation du chiffrement</block>
-  <block id="c0f1ffff2a89df254e7675f2a875147f" category="list-text">*Sécurité renforcée du back-end de stockage avec le cryptage Kerberos 5* : vous pouvez améliorer la sécurité du stockage par <block ref="63a1519b1e13a139789d4589996b0d00" category="inline-link-macro-rx"></block> pour le trafic entre votre cluster géré et le back-end de stockage. ASTRA Control Provisioner prend en charge le chiffrement Kerberos 5 sur connexions NFSv4.1 des clusters Red Hat OpenShift aux volumes Azure NetApp Files et ONTAP sur site.</block>
   <block id="ab52bbefe9879da9b800f9792291f5a4" category="list-text">*Récupérer des données à l'aide d'un snapshot* : Astra Control provisionner offre une restauration rapide de volume sur place à partir d'un snapshot à l'aide du<block ref="2aabb3b01d0d54317a9eeef910e001f6" prefix=" " category="inline-code"></block> (TASR) CR.</block>
   <block id="55a9d6aa251e3c334db4ab4055a4a004" category="inline-xref">ci-dessus</block>
   <block id="ffada8bf4e89c89a39c9186528693015" category="list-text">*Fonctionnalités de sauvegarde et de restauration pour les applications avec<block ref="caafdf62a2c609bfa5316118231a1007" prefix=" " category="inline-code"></block> Systèmes back-end avec sauvegarde par pilote* : comme décrit <block ref="abf023a9d67df445290faa3fe3686bc6" category="inline-xref-macro-rx"></block>.</block>
@@ -2515,7 +2508,6 @@ ASTRA Control Provisioner a remplacé Astra Trident en tant que mécanisme de pr
   <block id="5d169abc26c5e6f92958752c40a56358" category="cell">Quelles sont les distributions Kubernetes prises en charge ?</block>
   <block id="41f1a6b80fe46fb30f51ab1b61f1a992" category="list-text">*Fournisseurs de cloud*</block>
   <block id="57c997cc6378705850c1e534b71a042d" category="list-text">*Clusters autogérés*</block>
-  <block id="bab5ccef18c501c42d7cf94c7aaa84b3" category="list-text">*Clusters sur site*</block>
   <block id="22ec69733e61456fac578b2f6fcc2856" category="list-text">Azure Kubernetes Service sur Azure Stack HCI</block>
   <block id="1c4dff0a00340691e103ef63154df371" category="list-text">Anthos de Google</block>
   <block id="408bc02fc5ae5048343ebe28f7180f1e" category="list-text">Utilise ce nouveau rôle d'administration pour installer le lien../concepts/architecture#astra-control-components[astra Control Provisioner] sur le cluster et pour créer une ou plusieurs classes de stockage.</block>
@@ -2682,4 +2674,13 @@ Lors de la promotion d'un volume de destination en volume ReadWrite standard, vo
   <block id="a34b088697717e6985d362f6f34cb3cd" category="list-text">Sélectionnez *Astra Control Service* comme gamme de produits.</block>
   <block id="e41e554158031f0f3160a545e232ed02" category="list-text">Entrez la valeur captcha.</block>
   <block id="6ea2f3e9291aa9fe05308c7ef844a5f2" category="list-text">Cochez la case pour confirmer que vous avez lu la Déclaration de confidentialité de NetApp.</block>
+  <block id="fae11419c337e3427841a0c9b9d592f9" category="list-text">Red Hat OpenShift Container Platform sur site</block>
+  <block id="8e9845a2b1617722638d4b2716d9e349" category="list-text">*Clusters sur site*</block>
+  <block id="08451abaef86ef74512d1771c506741a" category="list-text">*ONTAP* sur site - Astra Control provisionner prend en charge le chiffrement Kerberos sur les connexions NFSv3 et NFSv4 depuis les clusters Red Hat OpenShift et Kubernetes en amont vers les volumes ONTAP sur site.</block>
+  <block id="0b660ae85d215a9e70834a4e745fe95b" category="section-title">Configurez le chiffrement Kerberos à la volée avec les volumes ONTAP sur site</block>
+  <block id="7c139dfc85d7e4497d2109fff4d0893f" category="paragraph">Vous pouvez activer le chiffrement Kerberos sur le trafic de stockage entre votre cluster géré et un système back-end de stockage ONTAP sur site.</block>
+  <block id="4733fee3df7d4e6e25e68e5ad7d2adf0" category="admonition">Le chiffrement Kerberos pour le trafic NFS avec les systèmes back-end de stockage ONTAP sur site n'est pris en charge que par le<block ref="8321592ce24c8a122ecf26a63cfca407" prefix=" " category="inline-code"></block> pilote de stockage</block>
+  <block id="df3d75a39182fab8d217744cdb76529e" category="list-text">*Sécurité renforcée du back-end de stockage avec le cryptage Kerberos 5* : vous pouvez améliorer la sécurité du stockage par <block ref="63a1519b1e13a139789d4589996b0d00" category="inline-link-macro-rx"></block> pour le trafic entre votre cluster géré et le back-end de stockage. ASTRA Control provisionner prend en charge le chiffrement Kerberos 5 sur connexions NFSv4.1 des clusters Red Hat OpenShift aux volumes Azure NetApp Files et ONTAP sur site.</block>
+  <block id="931459f37abea3d820afa0fcf0ecfef7" category="list-text">Centre de contrôle Astra
+ASTRA Control est désormais disponible dans un nouveau modèle de déploiement. _Astra Control Center_ est un logiciel autogéré que vous installez et exploitez dans votre data Center pour pouvoir gérer la gestion du cycle de vie des applications Kubernetes pour les clusters Kubernetes sur site.</block>
 </blocks>
